Version 0.2 is out!!! - Added self drawn tooltips that instantly show up on upgrades and are more readable - Fixed some issues with number display - Added few more upgrades for every building

--- a/main.css
+++ b/main.css
@@ -19,12 +19,6 @@ img{
     margin: auto 0;
 }
 
-#upgradeContainer img {
-    border: solid 10px transparent;
-    border-image: url(./img/borderfull.png) 10 round;
-    margin: 2px;
-}
-
 #bamboo{
     background-image: url(./img/bamboo.png);
     width: 256px;
@@ -57,6 +51,7 @@ img{
     border: solid 10px transparent;
     border-image: url(./img/borderfull.png) 10 round;
     background-color: #8ee4af;
+    position: relative;
 }
 
 .right{
@@ -105,11 +100,45 @@ table:active {
 
 #upgradeContainer img {
     background-image: url(./img/bamboobg.png);
+    border: solid 10px transparent;
+    border-image: url(./img/borderfull.png) 10 round;
+    margin: 2px;
+}
+
+#upgradeContainer {
+    display: flex;
+}
+
+.upgradeName {
+    font-weight: bold;
+}
+
+.upgradeCost {
+    font-weight: bold;
 }
 
 .upgradeTile:hover{
     transform: scale(0.95);
     transition: ease 0.1s;
+}
+
+#tooltip {
+    position: relative;
+}
+
+#tooltipContent {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 300px;
+    display: none;
+    background-image: url(./img/bamboobg.png);
+    border: solid 10px transparent;
+    border-image: url(./img/borderfull.png) 10 round;
+}
+
+#tooltip:hover #tooltipContent {
+    display: block;
 }
 
 #popUp{
@@ -152,6 +181,11 @@ table:active {
 
 #reset:hover{
     background-color: #379683;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
 }
 
 @media (min-width: 1281px) {
